--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "dotenv": "^17.2.3",
+    "jsonwebtoken": "^9.0.3",
     "next": "16.1.4",
     "pg": "^8.17.2",
     "react": "19.2.3",
