--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^7.2.0",
     "argon2": "^0.44.0",
     "dotenv": "^17.2.3",
+    "inngest": "^3.49.3",
     "jsonwebtoken": "^9.0.3",
     "next": "16.1.4",
     "pg": "^8.17.2",
