feat: transform Doxie into SaaS monorepo architecture
- Reorganize project into pnpm workspace (apps/web, apps/admin, apps/api, packages/db)
- Implement Postgres + Prisma schema for User, Org, Subscription, AI
- Migrate Auth to Prisma (Postgres)
- Update Note model to support Strangler Fig migration pattern (Mongo with Postgres User IDs)
- Add Docker & Docker Compose setup with secrets management
- Setup Admin and Core API skeletons

--- a/apps/admin/Dockerfile
+++ b/apps/admin/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18-alpine AS builder
 WORKDIR /app
-RUN npm install -g pnpm@10.12.1
+RUN npm install -g pnpm
 COPY . .
 RUN pnpm install
 RUN pnpm --filter @doxie/db db:generate
@@ -15,7 +15,5 @@ ENV NODE_ENV production
 COPY --from=builder /app/apps/admin/.next/standalone ./
 COPY --from=builder /app/apps/admin/.next/static ./apps/admin/.next/static
 
-# Run the admin app as a non-root user for least privilege
-USER node
 EXPOSE 3001
 CMD ["node", "apps/admin/server.js"]
