--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18-alpine AS builder
 WORKDIR /app
-RUN npm install -g pnpm@10.12.1
+RUN npm install -g pnpm
 COPY . .
 RUN pnpm install
 RUN pnpm --filter @doxie/db db:generate
@@ -14,6 +14,5 @@ COPY --from=builder /app/apps/web/.next/standalone ./
 COPY --from=builder /app/apps/web/.next/static ./apps/web/.next/static
 COPY --from=builder /app/public ./apps/web/public
 
-USER node
 EXPOSE 3000
 CMD ["node", "apps/web/server.js"]
