--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,22 +7,22 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-doxie}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
       POSTGRES_DB: ${POSTGRES_DB:-doxie_db}
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
   mongo:
     image: mongo:6-jammy
-    ports:
-      - "27017:27017"
+    expose:
+      - "27017"
     volumes:
       - mongo_data:/data/db
 
   redis:
     image: redis:7-alpine
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379"
 
   api:
     build:
