--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -12,7 +12,7 @@ ENV NODE_ENV production
 
 COPY --from=builder /app/apps/web/.next/standalone ./
 COPY --from=builder /app/apps/web/.next/static ./apps/web/.next/static
-COPY --from=builder /app/public ./apps/web/public
+COPY --from=builder /app/apps/web/public ./apps/web/public
 
 USER node
 EXPOSE 3000
