--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,8 @@ services:
     build:
       context: .
       dockerfile: apps/web/Dockerfile
+      args:
+        MONGODB_URI: ${MONGODB_URI}
     ports:
       - "3000:3000"
     environment:
