--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,20 +8,24 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@ai-sdk/google": "^3.0.18",
+    "@ai-sdk/openai": "^3.0.23",
+    "@doxie/db": "workspace:*",
+    "@prisma/client": "^5.10.0",
+    "ai": "^6.0.62",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
-    "@doxie/db": "workspace:*",
-    "@prisma/client": "^5.10.0"
+    "stripe": "^20.3.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.0",
-    "ts-node-dev": "^2.0.0",
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.0"
   }
 }
