--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,16 +13,25 @@
     "@doxie/db": "workspace:*",
     "@prisma/client": "^5.10.0",
     "ai": "^6.0.62",
+    "bcryptjs": "^3.0.2",
+    "bullmq": "^5.67.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "ioredis": "^5.9.2",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.0",
-    "stripe": "^20.3.0"
+    "stripe": "^20.3.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.0.0",
     "ts-node-dev": "^2.0.0",
