--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "next-auth": "^4.24.11",
     "stripe": "^20.3.0"
   },
   "devDependencies": {
